# cash-in-out

./: .gitignore  OpenWorkspace.cmd  index.html  package-lock.json  package.json  tsconfig.json
public/: icon.dt3
src/: App.tsx  logic.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: data.csv
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250214075310_cash_record.up.sql  20250217012449_add_sample_data.down.sql  20250217012449_add_sample_data.up.sql  20250217135842_add_sample_2.down.sql  20250217135842_add_sample_2.up.sql  20250313092909_create_cash_record_with_sample_data.down.sql  20250313092909_create_cash_record_with_sample_data.up.sql  20250315011559_create_category.down.sql  20250315011559_create_category.up.sql  20250319063308_connect_cash_record_and_category.down.sql  20250319063308_connect_cash_record_and_category.up.sql
src-tauri/src/: cash_io.rs  category.rs  database.rs  functions.rs  lib.rs  main.rs  other.rs  rw_csv.rs
src/components/Data/: Data.tsx  DropDown.tsx  OptionButtons.tsx  Table.tsx  TableRow.tsx  TermSelect.tsx  logic.ts
src/components/Edit/: Edit.tsx  EditButtons.tsx  Inputs.tsx  logic.ts
src/components/MainDisplay/: Displays.tsx
src/components/app_display/: AppDisplay.tsx  Displays.tsx  TabBar.tsx  TabsWrapper.tsx  logic.ts
src/components/main_display/: Displays.tsx  MainDisplay.tsx  TabsWrapper.tsx
src/components/setting/: Category.tsx  MCategorySelect.tsx  SCategorySelect.tsx  Setting.tsx  logic.ts
src/css/: app_display.css  data.css  edit.css  setting.css  styles.css  tabs_wrapper.css
