[package]
name = "cash-in-out"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-confirm", "dialog-message", "shell-open"] }

# csv読み取り、変換
csv = "1.3.0"
serde_derive = "1.0.196"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# 正規表現
regex = "1.10"

# logging
log = "0.4.25"
env_logger = "0.11.6"

# 環境変数
dotenv = "0.15.0"

# 時刻
chrono = { version = "0.4.39", features = [ "serde" ] }

# DB
async-std = { version = "1.13.0", features = [ "attributes" ] }
sqlx = { version = "0.8.3", features = [ "mysql", "runtime-async-std-native-tls", "chrono" ] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
